# url-shortener-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20250427023552_create_url_table.sql
src/: main.rs
src/dtos/: shortener_url_dto.rs
src/handlers/: get_original_url_handler.rs  shortener_url_handler.rs
src/routes/: router.rs
