[package]
edition = "2024"
name = "url-shortener-api"
version = "0.1.0"

[dependencies]
axum = {version = "0.8.3", features = ["json", "macros"]}
dotenvy = "0.15"
rand = "0.9.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-native-tls", "migrate"]}
tokio = {version = "1.34", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors"]}
